--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@headlessui/react": "^2.2.2",
     "@heroui/input": "^2.4.17",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.13",
-    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.13",
     "@tabler/icons-react": "^3.31.0",
     "@types/react-big-calendar": "^1.16.1",
